--- a/springboot1/src/main/resources/application-dev.yml
+++ b/springboot1/src/main/resources/application-dev.yml
@@ -15,6 +15,25 @@ spring:
     cache: false
     servlet:
       content-type: text/html
+  cache:
+    type:
+    jcache:
+      config: classpath:config/ehcache.xml
+
+  redis:
+    jedis:
+      pool:
+        ###连接池最大空闲数目
+        max-idle: 10
+        min-idle: 5
+        ###连接池最大连接数（使用负值表示没有限制）
+        max-active: 20
+        ###连接池最大阻塞等待时间
+        max-wait: -1
+    host: localhost
+    port: 6379
+    #连接超时时间（毫秒）
+    timeout: 10000
 
 
 mybatis:
