--- a/nb/bigdata/pom.xml
+++ b/nb/bigdata/pom.xml
@@ -104,7 +104,11 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>3.12.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.18</version>
+        </dependency>
     </dependencies>
 
 </project>
