--- a/springboot1/src/main/resources/application-dev.yml
+++ b/springboot1/src/main/resources/application-dev.yml
@@ -23,19 +23,17 @@ spring:
   redis:
     jedis:
       pool:
-        ###连接池最大空闲数目
-        max-idle: 10
-        min-idle: 5
-        ###连接池最大连接数（使用负值表示没有限制）
+        max-idle: 10   #连接池最大空闲数目
+        min-idle: 5    #连接池最大连接数（使用负值表示没有限制）
         max-active: 20
-        ###连接池最大阻塞等待时间
-        max-wait: -1
+        max-wait: -1   #连接池最大阻塞等待时间
     host: localhost
     port: 6379
-    #连接超时时间（毫秒）
-    timeout: 10000
-
-
+    timeout: 10000  #连接超时时间（毫秒）
+  servlet:
+    multipart:
+      max-file-size: 200MB #设置单个上传文件的大小
+      max-request-size: 200MB #设置一次请求上传文件的总容量
 mybatis:
   mapper-locations: classpath:mapping/*Mapping.xml
   type-aliases-package: com.shijizhuo.demo.entity
