--- a/springboot1/pom.xml
+++ b/springboot1/pom.xml
@@ -120,6 +120,10 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-test-autoconfigure</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
